# mycobot_ws

./: .gitignore  README.md
hello_moveit/: CMakeLists.txt  package.xml
hello_moveit/include/: plan_backup  poses
hello_moveit/src/: hello_moveit.cpp  pick_and_place_plan_around_objects.cpp
mycobot_bringup/scripts/: mycobot_280_gazebo.sh  mycobot_280_mtc_demos.sh
mycobot_demos/: CMakeLists.txt  README.md  package.xml
mycobot_demos/launch/: pick_and_place_mtc.launch.py
mycobot_demos/src/: README.md  mtc_pick_and_place.cpp  pick_and_place_plan_around_objects.cpp
mycobot_description/launch/: robot_state_publisher.launch.py
mycobot_gazebo/launch/: mycobot.gazebo.launch.py
mycobot_gazebo/models/block_blue/: model.sdf
mycobot_gazebo/models/block_green/: model.sdf
mycobot_gazebo/models/block_red/: model.sdf
mycobot_gazebo/worlds/: frames_2026-03-21_11.53.55.gv  pick_and_place.world
mycobot_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
mycobot_moveit_config/launch/: load_ros2_controllers.launch.py  move_group.launch.py
mycobot_moveit_config/rviz/: move_group.rviz
mycobot_moveit_config/src/: README.md  pick_and_place_actionclient.py
